force-app/main/default/objects/PS_ControlPlan_Details__c/fields/INSPECTION_CODE__c.field-meta.xml
<CustomField>
    <fullName>INSPECTION_CODE__c</fullName>
    <label>INSPECTION_CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>