force-app/main/default/objects/PS_ControlPlan_Details__c/fields/Operation_Number__c.field-meta.xml
<CustomField>
    <fullName>Operation_Number__c</fullName>
    <label>Operation_Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>