force-app/main/default/objects/PS_ControlPlan_Details__c/fields/OUTER_MIN__c.field-meta.xml
<CustomField>
    <fullName>OUTER_MIN__c</fullName>
    <label>OUTER_MIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>