force-app/main/default/objects/PS_ControlPlan_Details__c/fields/Process_Characteristic__c.field-meta.xml
<CustomField>
    <fullName>Process_Characteristic__c</fullName>
    <label>Process_Characteristic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>