force-app/main/default/objects/PS_ControlPlan_Details__c/fields/ProdGroup__c.field-meta.xml
<CustomField>
    <fullName>ProdGroup__c</fullName>
    <label>ProdGroup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>