force-app/main/default/objects/PS_ControlPlan_Details__c/fields/SAMPLE_PERCENT__c.field-meta.xml
<CustomField>
    <fullName>SAMPLE_PERCENT__c</fullName>
    <label>SAMPLE_PERCENT</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>