force-app/main/default/objects/PS_ControlPlan_Details__c/fields/TEST_OPERATION_DESC__c.field-meta.xml
<CustomField>
    <fullName>TEST_OPERATION_DESC__c</fullName>
    <label>TEST_OPERATION_DESC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>