force-app/main/default/objects/PS_ControlPlan_Details__c/fields/Tool_ID__c.field-meta.xml
<CustomField>
    <fullName>Tool_ID__c</fullName>
    <label>Tool_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>