force-app/main/default/objects/PS_ControlPlan_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProdGroup__c</columns>
    <columns>SubGroup__c</columns>
    <columns>Test_OPNO__c</columns>
    <columns>TEST_OPERATION_DESC__c</columns>
    <columns>Text1Val__c</columns>
    <columns>Text2Val__c</columns>
    <columns>Text3Val__c</columns>
    <columns>Text4Val__c</columns>
    <columns>CATEGORY_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SubGroup__c</field>
        <operation>startsWith</operation>
        <value>Vent</value>
    </filters>
    <label>All</label>
</ListView>